--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports:
-    shiny,
+    shiny (<= 4.2.3),
     shinythemes,
     shinybusy,
     DT,
