--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Imports:
     dplyr,
     bsplus,
     utils,
-    APCalign
+    APCalign (>= 1.1.2)
 Suggests: 
     testthat (>= 3.0.0),
     shinytest,
